Fixes edgenote link hover color which breaks on mobile.

--- a/app/stylesheets/Edgenote.scss
+++ b/app/stylesheets/Edgenote.scss
@@ -106,4 +106,8 @@ article > section > aside {
     }
   }
 
+  a:hover {
+    background-color: rgba(138, 199, 255, 0.07);
+  }
+
 }
